--- a/index.html
+++ b/index.html
@@ -5,30 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">   <!--Digite somente link e clique em link:css para cahamar o style.css-->
     <link rel="stylesheet" href="reset.css">
-    <title>AluraBooks</title>
-</head>
-<body>
-    <header class="cabecalho">
-        <div class="container">
-            <span class="cabecalho-menu-hamburguer"></span>
-            <img src="Menu.svg" alt="Menu de opções">
-            <img src="Logo.svg" alt="Logo da Alurabooks" class="container_imagem">
-        </div>
-        <div class="container">
-            <a href="#"><img src="Favoritos.svg" alt="Meus favoritos" class="container_imagem"></a>
-            <a href="#"><img src="Compras.svg" alt="Carrinhos de compras" class="container_imagem"></a>
-            <a href="#"><img src="Usuário.svg" alt="Meu perfil" class="container_imagem"></a>
-        </div>
-    </header>
-</body
-</html>
-<!DOCTYPE html>   <!--DIGITE html e clique no html:5 para começar tudo isso-->
-<html lang="pr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">   <!--Digite somente link e clique em link:css para cahamar o style.css-->
-    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"&gt;
     <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
@@ -38,7 +14,14 @@
 <body>
     <header class="cabecalho">
         <div class="container">
-            <span class="cabecalho-menu-hamburguer"></span>
+            <input type="checkbox" id="Menu" class="container_botao" /> 
+            <label for="menu"
+                   <span class="cabecalho-menu-hamburguer container_imagem"></span>
+                   </label>
+                   <ul class="lista menu"
+                   <li class="lista-menu_titulo" >Categorias</li>
+                   <li class="lista-menu_item" >
+                   <a href="#" class="lista-menu_item" >programação</a>
             <img src="Menu.svg" alt="Menu de opções">
             <img src="Logo.svg" alt="Logo da Alurabooks" class="container_imagem">
         </div>
